<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_joystick</name>
  <version>0.1.0</version>

  <description>Xbox joystick controls for turtlebot3</description>
  <license>License Declaration</license>

  <author email="keenan.burke@ecoation.com">Keenan Burke</author>
  <maintainer email="support@ecoationlabs.ca">Ecoation Labs</maintainer>

  <url type="website">https://ecoationlabs.ca/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>

  <depend>teleop_twist_joy</depend>
  <depend>domain_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>